finaly fixed the overflowx bug and the website is now fully responsive upto 414px width.

--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,13 @@
     box-sizing: border-box;
 }
 html,body{
+    overflow-x: hidden;
     height: 100%;
     width: 100%;
 }
 body{
     font-family: "Roboto", sans-serif;
+    overflow-x: hidden;
 
 }
 :root{
@@ -317,12 +319,18 @@ footer p{
         display: flex;
         flex-direction: column-reverse;
         row-gap: 1.5rem;
-        margin-left: 7rem;
+        margin-left: 5rem;
         width: 800px;
 
     }
+    .first .container-one .item-one{
+        display: flex;
+        flex-direction: column;
+        row-gap: 0.5rem;
+    }
     .fourth .card-item{
-        width: 550px;
+        width: 500px;
+        margin: 5rem 0;
     }
     .content{
         width: 550px;
@@ -330,6 +338,12 @@ footer p{
     .third .content p{
         max-width: 490px;
         font-size: 25px;
+    }
+    .third .content p{
+        max-width: 600px;
+        font-style: italic;
+        font-size: 20px;
+        margin: 1rem;
     }
     .third .content h4{
         margin-right: 3.5rem;
@@ -340,6 +354,146 @@ footer p{
     }
     .second .items .boxes p{
         font-size: 14px;
+    } 
+}
+@media (max-width:520px) {
+    .first .container-one{
+        display: flex;
+        flex-direction: column-reverse;
+        row-gap: 1.5rem;
+        margin-left: 5rem;
+        width: 750px;
+
+    }
+    .second{
+        padding: 1rem 0;
+    }
+    .second .items .boxes .box{
+        width: 166px;
+        height: 160px;
+    
+    }
+    .second p{
+        color: #1f2937;
+        font-weight: 800;
+        font-size: 30px;
+    }
+    .second  .items{
+        margin-top: 1.2rem;
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 1rem;
+    }
+    .second .items .boxes p{
+        font-size: 15px;
+        text-transform: uppercase;
+        color: #1f2937;
+        font-weight: 700;
+        padding: 1rem 0;
+    }
+    .third .content p{
+        width: 400px;
+        font-size: 20px;
+        margin: 1rem auto;
+    }
+    .third .content h4{
+        font-size: 0.9rem;
+        margin: 1rem 6rem 0 0;
+        align-self: flex-end;
+    }
+    .fourth .card-item{
+        column-gap: 2rem;
+        width: 440px;
+        margin: 4rem 0;
+        padding: 1rem;
+        border-radius: 10px;
+    }
+    .fourth .card-item .card h2{
+        font-size: 1.2rem;
+     }
+     .fourth .card-item .card p{
+        font-size: 0.9rem;
+    }
+    footer{
+        padding: 2rem;
+    }
+    footer p{
+        font-size: 12px;
+    }
+    
+}
+@media (max-width:420px) {
+    .first header{
+        width: 400px;
+    }
+    .first header nav ul li{
+        font-size: 1.2rem;
+        margin-right: 1rem;
+        margin-left: 1rem;
+    }
+    .first .container-one{
+        margin: 1rem auto;
+        display: flex;
+        flex-direction: column-reverse;
+        row-gap: 1.5rem;
+        margin-left: 1rem;
+        width: 730px;
+
+    }
+    .second{
+        padding: 1rem 0;
+    }
+    .second .items .boxes .box{
+        width: 166px;
+        height: 160px;
+    
+    }
+    .second p{
+        color: #1f2937;
+        font-weight: 800;
+        font-size: 30px;
+    }
+    .second  .items{
+        margin-top: 1.2rem;
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 1rem;
+    }
+    .second .items .boxes p{
+        font-size: 15px;
+        text-transform: uppercase;
+        color: #1f2937;
+        font-weight: 700;
+        padding: 1rem 0;
+    }
+    .third .content p{
+        width: 380px;
+        font-size: 18px;
+        margin: 1rem 0 0 6rem;
+    }
+    .third .content h4{
+        font-size: 0.9rem;
+        margin: 1rem 8rem 0 0;
+        align-self: flex-end;
+    }
+    .fourth .card-item{
+        column-gap: 2rem;
+        width: 390px;
+        margin: 4rem auto;
+        padding: 0.9rem;
+        border-radius: 10px;
+    }
+    .fourth .card-item .card h2{
+        font-size: 1.2rem;
+     }
+     .fourth .card-item .card p{
+        font-size: 0.9rem;
+    }
+    footer{
+        padding: 2rem;
+    }
+    footer p{
+        font-size: 12px;
     }
     
 }
